ie / ff spacing fixed; mobile styles updated; confidence / contact us sub menu added;

--- a/sites/all/themes/watermans_2013_10/css/watermans-2013-10-alpha-default-normal.css
+++ b/sites/all/themes/watermans_2013_10/css/watermans-2013-10-alpha-default-normal.css
@@ -9,7 +9,7 @@
 .region-footer-first .block-menu-block:first-child{margin-left:0;}
 
 /* reduce to allow for wrapper border size */
-.block--exp-faq-page-1,.region-menu-sub-inner .block-17,.cta,.om-maximenu-middle-right .last{width:219px;}
+.block--exp-faq-page-1,.region-menu-sub-inner .block-17,.cta,.om-maximenu-middle-right .last{width:218px;}
 /* reduced for margin */
 .block-views-exp-people-listing-page-1,.om-maximenu-middle-right .block-views-id--exp-people_listing-page_1.last{width:209px;}
 .om-maximenu-middle-right .block.last{margin-left:-4px;}
@@ -22,13 +22,13 @@
 /* 9cols + margin */
 .block-block-16{width:720px;}
 /* 9cols + margin - outer border width*/
-.block-block-24,.region-menu-sub-inner .block-block-20,.region-menu-sub-inner .block-menu-block,.om-maximenu-middle-right .first{width:719px;}
+.block-block-34,.block-block-24,.region-menu-sub-inner .block-block-20,.region-menu-sub-inner .block-menu-block,.om-maximenu-middle-right .first{width:719px;}
 
 /* 12 cols */
 .om-maximenu-no-style .om-maximenu-middle{width:938px;}
 
 /* sub navi */
-.context-ask-question .block-block-32,.block-block-id-24,.block-block-24 ,.block-block-16,.block--exp-news-listing-page-1  {height:115px;}
+.context-contact-us .block-menu-block-15,.context-confidence .block-block-34,.context-ask-question .block-block-32,.block-block-id-24,.block-block-24 ,.block-block-16,.block--exp-news-listing-page-1  {min-height:115px;}
 
 /* home page blog listing */
 .block-blog-listing-block ul li .left-col{width:100px;}
